--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,47 @@
-<p>home works!</p>
+
+
+<div class="w3-display-container" style="margin-bottom:50px">
+  <img src="assets/img/piatra-craiului-creasta.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-container w3-amber"
+   style="bottom:10%;opacity:0.7;width:70%">
+  <h2><b>4 Good Reasons<br>For travelling with us</b></h2>
+ </div>
+</div>
+
+
+<div class="w3-row w3-container center" style="margin:50px 0">
+<div class="w3-half w3-container">
+  <div class="w3-topbar w3-border-amber">
+    <img src="assets/img/peretele-valea-alba.jpg" style="width:100%">
+    <h2>Have new experiences</h2>
+    <p>Every week you can have a new adventure in our beloved mountains.</p>
+  </div>
+</div>
+
+<div class="w3-half w3-container center">
+  <div class="w3-topbar w3-border-amber">
+    <img src="assets/img/Retezat-National-Park-Hiking-tour.jpg" style="width:100%">
+    <h2>Do what you love</h2>
+    <p>Don't let a week pass by without going on a hike, trail or a stroll in the woods.</p>
+  </div>
+</div>
+</div>
+
+<div class="w3-row w3-container center" style="margin:50px 0">
+<div class="w3-half w3-container">
+  <div class="w3-topbar w3-border-orange">
+    <img src="assets/img/piatra-mare.jpg" style="width:100%">
+    <h2>Cold doesn't stop us</h2>
+    <p>When you truelly love somebody, you love them even when things get wild. It's the same with the love for the Mountain.</p>
+  </div>
+</div>
+
+<div class="w3-half w3-container center">
+  <div class="w3-topbar w3-border-orange">
+    <img src="assets/img/floare-colt.jpg" style="width:100%">
+    <h2>Realize Your Dreams</h2>
+    <p>Don't wait until it is to late.</p>
+    </div>
+</div>
+</div>
+
