--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -1,1 +1,4 @@
-<p>logout works!</p>
+<div class="container" >
+  <img src="assets/img/TARCU.jpg" alt="Snow" style="width:100%">
+  <button (click)="logoutUser()" class="btn">LOGOUT</button>
+</div>
