--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,10 @@
       </div>
 <ul>
   <li><a routerLink="/home">Home</a></li>
-  <li><a routerLink="/events">Events</a></li>
-  <li style="float:right"><a  routerLink="/login">Login</a></li>
-  <li style="float:right"><a routerLink="/register">Register</a></li>
-  <li style="float:right"><a routerLink="/logout">LogOut</a></li>
+  <li><a *ngIf=logged() routerLink="/events">Events</a></li>
+  <li><a *ngIf=loggedAdmin() routerLink="/events">Events</a></li>
+  <li style="float:right"><a *ngIf=!logged() routerLink="/login">Login</a></li>
+  <li style="float:right"><a *ngIf=!logged() routerLink="/register">Register</a></li>
+  <li style="float:right"><a *ngIf=logged() routerLink="/logout">LogOut</a></li>
 </ul>
+
