--- a/src/app/event-add/event-add.component.html
+++ b/src/app/event-add/event-add.component.html
@@ -34,7 +34,7 @@
         [(ngModel)]="model.details" name="details">
         </div>
 
-    <button type="submit"  [disabled]="!eventAddForm.form.valid">Create Event</button>
+    <button type="submit"  [disabled]="!eventAddForm.form.valid" class = "button">Create Event</button>
     </form>
         
 </div>
