--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,12 @@
-<h3>Login</h3>
+
+<div class="w3-display-container" >
+  <img src="assets/img/mountains.jpg" style="width:100%;">
+  <div class="w3-display-middle w3-container w3-amber"
+         style="bottom:10%;opacity:0.7;width:70%">
+        <h1>Login</h1>
+       </div>
+  
+</div>
 
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
@@ -17,5 +25,5 @@
     </div>
   </div>
 
-  <button type="submit" >Login</button>
+  <button type="submit" class="button" >Login</button>
 </form>
