--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,14 @@
-<div class="container">
-        <h1>Register here</h1>
+
+<div class="w3-display-container" >
+  <img src="assets/img/mountains.jpg" style="width:100%;">
+  <div class="w3-display-middle w3-container w3-amber"
+         style="bottom:10%;opacity:0.7;width:70%">
+        <h1>Register</h1>
+       </div>
+  
+</div>
+
+        <div>
         <form (ngSubmit)="onSubmit()" #userRegisterForm="ngForm">
           <div class="form-group">
             <label for="username">Username</label>
@@ -53,7 +62,7 @@
             class="alert alert-danger">Last name is required</div>
           </div>
       
-          <button type="submit" class="btn btn-success" [disabled]="!userRegisterForm.form.valid">Register</button>
+          <button type="submit" class="button" [disabled]="!userRegisterForm.form.valid">Register</button>
         </form>
       </div>
       
